<?xml version="1.0" encoding="utf-8"?><!-- 对话框内部布局：垂直排列输入框和按钮 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- 对话框标题：对应文档中的“ANDROID APP”文本 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/android_app"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="#FFB933"
        android:gravity="center" />

    <!-- 用户名输入框：对应文档中的“Username” -->
    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="50dp"

        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:hint="@string/username"
        android:paddingStart="10dp"
        android:inputType="text"
        android:maxLines="1"
        tools:ignore="RtlSymmetry" />

    <!-- 密码输入框：对应文档中的“Password” -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:paddingStart="10dp"
        android:inputType="textPassword"
        android:maxLines="1"
        tools:ignore="RtlSymmetry" />

    <!-- 按钮容器：水平排列Cancel和Sign in按钮、 -->
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:weightSum="2">

        <!-- Cancel按钮 -->
        <Button
            android:id="@+id/btn_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <!-- Sign in按钮 -->
        <Button
            android:id="@+id/btn_sign_in"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in" />

    </LinearLayout>

</LinearLayout>