<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 跳转至 ListView 实验的按钮 -->
    <Button
        android:id="@+id/btn_go_listview_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task1"
        tools:ignore="MissingConstraints" />
    <!-- 进入AlertDialog实验的按钮 -->
    <Button
        android:id="@+id/btn_go_alert_dialog_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/task2"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_listview_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
    <!-- 新增：进入XML菜单实验的按钮 -->
    <Button
        android:id="@+id/btn_go_menu_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/task3"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_alert_dialog_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_go_action_mode_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/task4"
        app:layout_constraintTop_toBottomOf="@+id/btn_go_menu_test"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</androidx.constraintlayout.widget.ConstraintLayout>